# dprint-plugin-toml

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  dprint.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
deployment/: schema.json
deployment/npm/: .npmignore  README.md  index.d.ts  index.js  index.test.js  package-lock.json  package.json  setup.js
scripts/: generate_release_notes.ts
src/: cargo.rs  format_text.rs  lib.rs  rowan_extensions.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  resolve_config.rs
src/generation/: context.rs  generate.rs  mod.rs
src/parser/: context.rs  mod.rs  parse.rs
tests/: spec_test.rs  test.rs
tests/specs/Array/: ArrayWithComments.txt  Array_All.txt
tests/specs/ArrayOfTables/: ArrayOfTables_All.txt
tests/specs/CargoToml/: CargoToml_All.txt  CargoToml_ApplyConventions_False.txt  CargoToml_Workspace.txt
tests/specs/Comments/: Comments_ForceLeadingSpace_False.txt  Comments_ForceLeadingSpace_True.txt
tests/specs/File/: File_All.txt
tests/specs/InlineTable/: InlineTable_All.txt
tests/specs/Issues/: Issue0010.txt
tests/specs/Key/: Key_All.txt
tests/specs/Table/: Table_All.txt
tests/specs/Values/: Values_All.txt
