[package]
name = "dprint-plugin-toml"
version = "0.5.3"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-toml"
keywords = ["formatting", "formatter", "toml"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-toml"
description = "TOML formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
dprint-core = { version = "0.47.1", features = ["formatting"] }
itertools = "0.10"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
taplo = { version = "0.7.0", default_features = false }

[dev-dependencies]
debug-here = "0.2"
dprint-development = "0.4.1"
serde_json = { version = "1.0" }
