[package]
name = "dprint-plugin-toml"
version = "0.6.4"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-toml"
keywords = ["formatting", "formatter", "toml"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-toml"
description = "TOML formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[[test]]
name = "specs"
path = "tests/spec_test.rs"
harness = false

[dependencies]
anyhow = "1.0.65"
dprint-core = { version = "0.67.4", features = ["formatting"] }
dprint-core-macros = "0.1.0"
itertools = "0.10"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
taplo = { version = "0.12.1", default-features = false }

[dev-dependencies]
debug-here = "0.2"
dprint-development = "0.10.1"
serde_json = { version = "1.0" }
